skeplib/tests/fixtures/sema_project/valid/file_import_alias/main.sk
from a import add as plus;
fn main() -> Int { return plus(20, 22); }
