skeplib/tests/fixtures/sema_project/invalid/conflicting_wildcard/main.sk
from a import *;
from b import *;
fn main() -> Int { return 0; }
